

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

QT4_WRAP_CPP(moc_srcs include/${PROJECT_NAME}/UImageViewWidget.h) 

ADD_LIBRARY(utilite_cvqt ${moc_srcs})
TARGET_LINK_LIBRARIES(utilite_cvqt ${OpenCV_LIBS} ${QT_LIBRARIES})
	
SET_TARGET_PROPERTIES(
utilite_cvqt
PROPERTIES
 VERSION ${UTILITE_VERSION} 
 SOVERSION ${UTILITE_VERSION}
 INSTALL_NAME_DIR ${CMAKE_INSTALL_PREFIX}/lib
)

INSTALL(TARGETS utilite_cvqt
        RUNTIME DESTINATION bin COMPONENT runtime
        LIBRARY DESTINATION lib COMPONENT devel
        ARCHIVE DESTINATION lib COMPONENT devel)
        
INSTALL(DIRECTORY include/${PROJECT_NAME} 
        DESTINATION include 
		COMPONENT devel
        FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
